# burst-elastic

./: Cargo.toml
src/: generator.rs  main.rs
