[package]
name = "burst-elastic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.5.10"
tokio = { version = "1.18.2", features = ["full"] }
elasticsearch = "7.14.0-alpha.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
fake = { version = "2.4.3", features = ["derive", "uuid"] }
uuid = "1.1.1"
rand = "0.8"
lazy_static = "0.1.16"
property = "0.3.3"
structopt = { version = "0.3"}
futures = "0.3.21"
